# SolarHelper

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  docker-compose.yml  general_solar_context.md  pyproject.toml  requirements.txt  scrapy.py  server.py  streamlit.py  vercel.json  wsgi.py
backend/context/: analysis.ipynb
backend/models/: requests.py  responses.py
backend/prediction_models/: preprocessing_model.pkl
backend/routers/: chat.py  power_prediction.py  recommendation.py  scrape.py
backend/services/: chat_service.py  llm_service.py  power_pipeline.py  power_prediction_service.py  recommendation_service.py  scrape_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/public/: comparision-data.json  manifest.json  offline.html  service-worker.js  unitcost.json
frontend/public/pyodide/: predict_energy.py
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/componets/: ChatInterface.tsx  CommunitySection.tsx  ComparisonTool.tsx  Footer.tsx  Header.tsx  InstallPrompt.tsx  MobileNavBar.tsx  Navbar.tsx  RecommendationEngine.tsx  SavingsCalculator.tsx  ScrollToTop.tsx  ThemeToggleButton.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/pages/: CalculatorPage.tsx  ChatPage.tsx  CommunityPage.tsx  ComparisonPage.tsx  HomePage.tsx  NotFoundPage.tsx  RecommendationsPage.tsx
weather analysis/: generate_compatible_model.py  test.py  train_lstm_model.py  weather_prediction_lstm.ipynb
weather analysis/models/: monthly_lstm_model.h5  yearly_lstm_model.h5
(+6 files in other folders)
