[project]
name = "backend"
version = "0.1.0"
description = "backend for solarHelper"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "html2text>=2025.4.15",
    "langchain-google-genai>=2.1.3",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
    "langchain>=0.2.11",
    "langchain-community>=0.2.10",
    "faiss-cpu>=1.8.0",
    "lightgbm>=4.6.0",
]
